--- a/frontend/src/components/MyFoodPage/MyFoodList.css
+++ b/frontend/src/components/MyFoodPage/MyFoodList.css
@@ -1,3 +1,23 @@
-.hidden {
-  display: none;
+
+
+.food-details table {
+  border-collapse: collapse;
+  width: 100%;
+  margin-top: 10px;
+}
+
+.food-details td {
+  padding: 5px;
+  border: 1px solid #ccc;
+}
+
+.food-details td:first-child {
+  font-weight: bold;
+  width: 50%;
+  background-color: #f2f2f2;
+}
+
+.food-details td:nth-child(2) {
+  width: 50%;
+  text-align: right;
 }
