--- a/frontend/src/components/CreateFoodPage/CreateFoodPage.css
+++ b/frontend/src/components/CreateFoodPage/CreateFoodPage.css
@@ -15,11 +15,6 @@
   text-align: center;
 }
 
-.add-food-form label {
-  display: block;
-  margin-bottom: 10px;
-}
-
 .add-food-form input[type="text"],
 .add-food-form input[type="number"] {
   width: 100%;
@@ -50,4 +45,26 @@
 
 .add-food-form button[type="submit"]:hover {
   background-color: #3e8e41;
+}
+
+.add-food-form table {
+  border-collapse: collapse;
+  width: 100%;
+  margin-top: 10px;
+}
+
+.add-food-form td {
+  padding: 5px;
+  border: 1px solid #ccc;
+}
+
+.add-food-form td:first-child {
+  font-weight: bold;
+  width: 50%;
+  background-color: #f2f2f2;
+}
+
+.add-food-form td:nth-child(2) {
+  width: 50%;
+  text-align: right;
 }
