--- a/frontend/src/components/MyFoodList/MyFoodList.css
+++ b/frontend/src/components/MyFoodList/MyFoodList.css
@@ -1,5 +1,6 @@
 .create-button {
-  display: block;
+  display: flex;
+  justify-content: end;
   margin: 20px auto 0;
   background-color: #4caf50;
   color: white;
@@ -12,6 +13,16 @@
 
 .create-button:hover {
   background-color: #3e8e41;
+}
+
+.edit-button{
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  font-size: 10pt;
+  cursor: pointer;
 }
 
 .food-details table {
