--- a/frontend/src/components/MyMealList/MyMealList.css
+++ b/frontend/src/components/MyMealList/MyMealList.css
@@ -1,26 +1,19 @@
-.meal-table {
-  border-collapse: collapse;
-  width: 100%;
-  margin-bottom: 15px;
-}
-
-.meal-table td, th {
-  text-align: left;
-  padding: 8px;
-  border: 1px solid #ddd;
-}
-
-.meal-table tr:nth-child(even) {
-  background-color: #f2f2f2;
-}
-
-.meal-table th {
-  background-color: navy;
-  color: white;
-  font-weight: normal;
-  border: 1px solid #ddd;
-}
-
 .meal-list-container li {
   list-style-type: none
+}
+
+.meal-list-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.meal-list {
+  display: flex;
+  flex-direction: column;
+  width: auto;
+}
+
+.meal-card-container {
+  width: auto;
 }
