--- a/frontend/src/components/Navigation/ProfileButton.css
+++ b/frontend/src/components/Navigation/ProfileButton.css
@@ -1,3 +1,54 @@
 .hidden {
   display: none;
 }
+
+.profile-button {
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 30px;
+}
+
+.logout-button {
+  display: block;
+  margin: 20px auto 0;
+  background-color: white;
+  color: #4caf50;
+  border: none;
+  border-radius: 5px;
+  padding: 5px 10px;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+.profile-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.profile-dropdown {
+  text-align: left;
+}
+
+.profile-button {
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 30px;
+}
+
+.logout-button {
+  margin: 20px auto 0;
+  background-color: white;
+  color: #4caf50;
+  border: none;
+  border-radius: 5px;
+  padding: 5px 10px;
+  font-size: 1rem;
+  cursor: pointer;
+  position: relative;
+  top: -10px;
+}
