--- a/frontend/src/components/FoodDiary/FoodDiary.css
+++ b/frontend/src/components/FoodDiary/FoodDiary.css
@@ -26,3 +26,35 @@
 .total-row td {
   background-color: white;
 }
+
+.remember-meal-button {
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 10px;
+  font-size: 10pt;
+  cursor: pointer;
+  margin: 10px;
+}
+
+.add-log-button {
+  background-color: blue;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 10px;
+  font-size: 10pt;
+  cursor: pointer;
+  margin: 10px;
+}
+
+.container-container {
+  margin: 50px;
+}
+
+.diary-log-container{
+  border: 1px solid black;
+  padding: 20px;
+  margin: 10px;
+}
