--- a/frontend/src/components/Navigation/ProfileButton.css
+++ b/frontend/src/components/Navigation/ProfileButton.css
@@ -26,10 +26,18 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: relative;
 }
 
 .profile-dropdown {
   text-align: left;
+  position: absolute;
+  top: 100%;
+  right: 0;
+  background-color: navy;
+  margin: 25px;
+  padding: 25px;
+  box-shadow: 5px 5px black;
 }
 
 .profile-button {
