--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,3 +2,7 @@
 * {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
+
+button:hover {
+  box-shadow: 5px 5px black;
+}
