--- a/frontend/src/components/FoodDiary/FoodDiary.css
+++ b/frontend/src/components/FoodDiary/FoodDiary.css
@@ -55,6 +55,8 @@
 
 .diary-log-container{
   border: 1px solid black;
-  padding: 20px;
-  margin: 10px;
+  padding: 50px;
+  margin: auto;
+  background-color: white;
+
 }
