--- a/frontend/src/components/HomePage/SplashPage.css
+++ b/frontend/src/components/HomePage/SplashPage.css
@@ -1,5 +1,5 @@
 .splash-page {
-  background-image: url("https://i.insider.com/62de9331bd18c30019d1a729?width=700");
+  background-image: url("https://blog.insidetracker.com/hs-fs/hubfs/healthy%20beans%20lentils%20legumes.jpg?width=840&name=healthy%20beans%20lentils%20legumes.jpg");
   background-size: cover;
   height: 100vh;
   width: 100vw;
@@ -11,7 +11,7 @@
 
 .splash-page p,
 .splash-page h1 {
-  background-color: white;
+  background-color: #e7e5e5c1;
   padding: 20px;
   width: auto;
   box-sizing: border-box
