--- a/frontend/src/components/Meals/EditMeal.css
+++ b/frontend/src/components/Meals/EditMeal.css
@@ -45,3 +45,9 @@
   font-size: 10pt;
   cursor: pointer;
 }
+
+.edit-meal-container{
+  background-color: white;
+  margin: auto;
+  padding: 50px;
+}
