--- a/frontend/src/components/FoodDiary/FoodDiary.css
+++ b/frontend/src/components/FoodDiary/FoodDiary.css
@@ -58,5 +58,11 @@
   padding: 50px;
   margin: auto;
   background-color: white;
+}
 
+.container-container input {
+  width: 150px;
+  height: 50px;
+  margin-bottom: 50px;
+  font-size: 16px;
 }
