--- a/frontend/src/components/Meals/EditMeal.css
+++ b/frontend/src/components/Meals/EditMeal.css
@@ -8,10 +8,14 @@
   margin: 20px;
   display: flex;
   justify-content: start;
+  align-items: end;
+  gap: 10px;
 }
 
-.top-options input {
+.edit-meal-input {
   width: 200px;
+  height: 30px;
+  font-size: 16px;
 }
 
 .submit-edit-button {
@@ -22,7 +26,6 @@
   padding: 10px 10px;
   font-size: 10pt;
   cursor: pointer;
-  margin: 10px;
 }
 
 .delete-edit-button {
@@ -33,7 +36,6 @@
   padding: 10px 10px;
   font-size: 10pt;
   cursor: pointer;
-  margin: 10px;
 }
 
 .remove-button {
@@ -50,4 +52,8 @@
   background-color: white;
   margin: auto;
   padding: 50px;
+}
+
+.edit-meal-label {
+  font-size: 20px;
 }
