--- a/frontend/src/components/CreateFoodPage/CreateFoodPage.css
+++ b/frontend/src/components/CreateFoodPage/CreateFoodPage.css
@@ -68,3 +68,10 @@
   width: 50%;
   text-align: right;
 }
+
+.create-food-form-errors {
+    color: #e12c2c;
+    font-size: 14px;
+    margin-bottom: 20px;
+    text-align: center;
+}
