--- a/frontend/src/components/Meals/MyMealList.css
+++ b/frontend/src/components/Meals/MyMealList.css
@@ -3,8 +3,10 @@
 }
 
 .meal-list-container {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  display: flex;
+
+  /* display: grid;
+  grid-template-columns: 1fr 1fr 1fr; */
   margin: 100px;
   padding: 50px;
   background-color: white;
@@ -32,4 +34,10 @@
   margin-right: 20px;
   border-radius: 10pt;
   width: 500px;
+  display: flex;
+}
+
+.left-side-meal-list {
+  display: flex;
+  flex-direction: column;
 }
