foodCard for the database

--- a/frontend/src/components/Search/SearchBar.css
+++ b/frontend/src/components/Search/SearchBar.css
@@ -7,3 +7,11 @@
 .search-bar {
   margin-bottom: 50px;
 }
+
+.search-left-right {
+  display: flex;
+}
+
+.search-results-container {
+  list-style: none;
+}
