--- a/frontend/src/components/Search/SearchBar.css
+++ b/frontend/src/components/Search/SearchBar.css
@@ -1,11 +1,28 @@
 .search-bar-form {
   margin: 100px;
   background-color: white;
-  padding: 100px;
+  padding: 10px;
+  width: fit-content;
+  border-radius: 5px;
 }
 
 .search-bar {
   margin-bottom: 50px;
+  border: 1px solid black;
+  outline: none;
+  width: 300px;
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.search-bar-button {
+  background-color: #f5f5f5;
+  border: 1px solid black;
+  border-radius: 5px;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  padding: 10px;
 }
 
 .search-left-right {
@@ -17,4 +34,21 @@
 
 .search-results-container {
   list-style: none;
+  border: 1px solid #f5f5f5;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+  padding: 10px;
+  border-radius: 5px;
+  width: 400px;
 }
+
+.food-card-container {
+  background-color: white;
+  border: 1px solid #f5f5f5;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+  padding: 50px;
+  display: flex;
+  justify-content: center;
+  border-radius: 5px;
+  width: 500px;
+  margin-left: 50px;
+  }
