--- a/frontend/src/components/Search/SearchBar.css
+++ b/frontend/src/components/Search/SearchBar.css
@@ -1,28 +1,116 @@
 .search-bar-form {
-  margin: 100px;
-  background-color: white;
+  margin: 100px auto;
+  background-color: #f5f5f5;
   padding: 10px;
   width: fit-content;
   border-radius: 5px;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+  display: flex;
+  align-items: center;
 }
 
 .search-bar {
-  margin-bottom: 50px;
-  border: 1px solid black;
+  margin-bottom: 0;
+  border: none;
   outline: none;
-  width: 300px;
+  flex: 1;
   padding: 10px;
-  border-radius: 5px;
+  border-radius: 5px 0 0 5px;
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 .search-bar-button {
-  background-color: #f5f5f5;
-  border: 1px solid black;
-  border-radius: 5px;
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+  background-color: #4caf50;
+  border: none;
+  border-radius: 0 5px 5px 0;
   cursor: pointer;
   padding: 10px;
+  color: white;
+  transition: background-color 0.3s ease;
+}
+
+.search-bar-button:hover {
+  background-color: #45a049;
+}
+
+.search-results-container {
+  display: flex;
+  justify-content: center;
+  align-items: start;
+  margin: 100px auto;
+  padding: 20px;
+  max-width: 1200px;
+}
+
+.common-list,
+.branded-list {
+  flex: 1;
+  max-width: 400px;
+  margin: 20px;
+  padding: 20px;
+  background-color: #f5f5f5;
+  border-radius: 5px;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.common-list h2,
+.branded-list h2 {
+  margin-bottom: 10px;
+  color: #333;
+  text-align: center;
+}
+
+.common-list ul,
+.branded-list ul {
+  list-style: none;
+  padding: 0;
+   display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: start;
+  margin: 40px;
+}
+
+.common-list li,
+.branded-list li {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-bottom: 1px solid #ddd;
+  padding: 30px 0;
+  width: 100%;
+}
+
+.common-list li:last-child,
+.branded-list li:last-child {
+  border-bottom: none;
+}
+
+.common-list li div,
+.branded-list li div {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  align-items: center;
+}
+
+.common-list li div p,
+.branded-list li div p {
+  margin: 0;
+  padding: 10px;
+  color: #666;
+}
+
+.common-list li div img,
+.branded-list li div img {
+  width: 80px;
+  height: 80px;
+  object-fit: cover;
+  border-radius: 50%;
+  margin-right: 10px;
 }
 
 .food-card-container {
@@ -39,46 +127,4 @@
   padding: 100px;
   border: 5px solid black;
   box-shadow: 0px 0px .01px 20px rgba(86, 20, 20, 0.696);
-}
-
-.search-results-container {
-  display: flex;
-  flex-direction: row;
-  background-color: white;
-  margin: 100px;
-  padding: 100px;
-}
-
-.search-bar-form img {
-  width: 100px;
-  height: 100px;
-}
-
-.common-list li div img,
-.branded-list li div img {
-  width: 150px;
-  height: 150px;
-  object-fit: cover;
-  margin: 10px;
-}
-
-.common-list,
-.branded-list {
-  flex-basis: 50%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  box-sizing: border-box;
-  list-style: none;
-  border: 1px solid #f5f5f5;
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
-  padding: 10px;
-  border-radius: 5px;
-}
-
-.common-list li,
-.branded-list li {
-  border: 1px dashed black;
-  padding: 50px;
-  margin: 10px;
 }
