--- a/frontend/src/components/Navigation/ProfileButton.css
+++ b/frontend/src/components/Navigation/ProfileButton.css
@@ -2,18 +2,42 @@
   display: none;
 }
 
+.profile-container {
+  display: inline-block;
+  position: relative;
+}
+
 .profile-button {
   height: 30px;
+  width: 30px;
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 30px;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+.profile-dropdown {
+  position: absolute;
+  top: calc(100% + 10px);
+  right: 0;
+  background-color: #000080;
+  padding: 10px;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
+  border-radius: 5px;
+  min-width: 150px;
+  z-index: 10;
+  color: #fff;
+}
+
+.profile-dropdown li {
+  margin-bottom: 10px;
 }
 
 .logout-button {
   display: block;
-  margin: 20px auto 0;
-  background-color: white;
+  background-color: #fff;
   color: #4caf50;
   border: none;
   border-radius: 5px;
@@ -22,41 +46,13 @@
   cursor: pointer;
 }
 
-.profile-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  position: relative;
+.profile-button:hover,
+.profile-dropdown:hover {
+  background-color: #0000a0;
 }
 
-.profile-dropdown {
-  text-align: left;
-  position: absolute;
-  top: 100%;
-  right: 0;
-  background-color: navy;
-  margin: 25px;
-  padding: 25px;
-  box-shadow: 5px 5px black;
-}
-
-.profile-button {
-  height: 30px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 30px;
-}
-
-.logout-button {
-  margin: 20px auto 0;
-  background-color: white;
-  color: #4caf50;
-  border: none;
-  border-radius: 5px;
-  padding: 5px 10px;
-  font-size: 1rem;
-  cursor: pointer;
-  position: relative;
-  top: -10px;
+.profile-button:focus,
+.profile-dropdown:focus {
+  outline: none;
+  box-shadow: 0 0 0 3px rgba(0, 0, 255, 0.5);
 }
